Final updates for Version 3.0.0

--- a/_sidebar-children.html
+++ b/_sidebar-children.html
@@ -6,7 +6,7 @@
             <nav class="nav-inside">
                 <ul>
                     <li class="overview{if embed:page_slug == 'children'} current{/if}">
-                        <a href="/children/">Overview</a>
+                        <a href="/children/">Sunday Mornings</a>
                     </li>
                     <li class="moms{if embed:page_slug == 'moms'} current{/if}">
                         <a href="/moms/">Moms Group</a>
