--- a/_sidebar-groups.html
+++ b/_sidebar-groups.html
@@ -55,7 +55,7 @@
 
                 <input name="subject" type="hidden" value="ArtisanChurch.com groups form submission">
 
-                <input name="submit" type="submit" value="Send">
+                <input class="btn "name="submit" type="submit" value="Send">
 
             {/exp:email:contact_form}
 
