--- a/calendar.html
+++ b/calendar.html
@@ -23,12 +23,10 @@
                         height="1100"></iframe>
             </div>
 
-            <p>
-                <!--<a href="https://www.google.com/calendar/ical/ank35711dmuaa34iq4f5h4e0fc%40group.calendar.google.com/public/basic.ics">-->
-                <a href="webcal://artisanchurch.ccbchurch.com/w_calendar_sub.ics">
-                    Subscribe in iCalendar (.ics) format
-                </a>
-            </p>
+            <!--<a href="https://www.google.com/calendar/ical/ank35711dmuaa34iq4f5h4e0fc%40group.calendar.google.com/public/basic.ics">-->
+            <a href="webcal://artisanchurch.ccbchurch.com/w_calendar_sub.ics">
+                Subscribe in iCalendar (.ics) format <i class="icon-calendar"></i>
+            </a>
 
         </section>
 
