--- a/children.html
+++ b/children.html
@@ -10,55 +10,47 @@
       <div class="wrapper">
         <section class="content">
 
-            <h1>Children & Families</h1>
+            <h1>Children’s activities on Sunday mornings</h1>
 
             <p>
-                We would love to have your family join us for a Sunday morning service!
-                Children are always welcome to stay in the sanctuary with their parents
-                for the entire service, or can take part in our programming during the
-                sermon portion of our service.
+                We would love to have your family join us for one of our Sunday morning services!
+                Families are always welcome to stay together in the sanctuary for the entire service,
+                or kids can take part in our programming during the sermon portion.
                 Children are typically invited to take part in programming beginning at
                 the passing of the peace and are picked up by parents during communion.
             </p>
 
-            <h2>
-                Seedlings (Infants)
-            </h2>
-
+            <h2>Seedlings (Infants)</h2>
             <p>
-                We have an infant care room available for parents to use,
-                and volunteers we call "Baby Holders" who would be happy to
-                care for your infant during the sermon time of our service!
+                We have an infant care room available for parents or caregivers to use any time.
+                The room is filled with everything needed to care for an infant
+                in a quiet setting – baby toys, glider chairs, a changing table, etc.
+                {!-- The service can be heard on speakers in this room. --}
+                {!-- and volunteers we call "Baby Holders" who would be happy to
+                care for your infant during the sermon time of our service! --}
+                Babies are also always welcome in the service.
             </p>
 
+            <h2>Sprouts (Toddlers – Ages 1–3)</h2>
             <p>
-                The room is filled with age appropriate toys, a changing table,
-                and glider rocking chairs perfect for nursing moms.
-                (We ask that you remove your shoes as you enter in order to
-                keep the room as clean as possible for crawlers!)
+                Our toddlers explore Bible stories each week through play.
+                We have wonderful, caring volunteers who help kids to get used to
+                being dropped off and help them engage in group activities.
             </p>
 
+            <h2>The Garden (Pre-K – 3rd Grade)</h2>
             <p>
-                Don’t forget – children of all ages (and nursing moms!)
-                are always welcome in the sanctuary!
+                In the Garden, children explore a different Bible story each month
+                through a variety of workshops. Each week they engage in the story
+                through art, science, music, cooking, film, and more!
             </p>
 
-            <h2>
-                Sprouts (Toddlers)
-            </h2>
+            <hr>
 
             <p>
-                Our toddlers have a special class of their own, with caring volunteers
-                who explore a Bible story with them and spend lots of time playing together!
-            </p>
-
-            <h2>
-                The Garden (Pre-K – 3rd Grade)
-            </h2>
-
-            <p>
-                In the Garden, kids explore a different Bible story each month through a variety of workshops.
-                Each week they engage in the story through art, science, music, cooking, film, and more!
+                Children who have completed 3rd grade are invited stay
+                in the sanctuary during the sermon time and join us for
+                <a href="/preteens/">preteen group</a>!
             </p>
 
         </section>
