--- a/connection-groups.html
+++ b/connection-groups.html
@@ -14,36 +14,39 @@
 
             {!-- <h2>Currently meeting</h2> --}
 
-            <img class="connection-group-img"
-                 src="/ee/images/site_images/series/Game_Night_we1.jpg"
-                 alt="">
-            <h2>Second Friday Game Night</h2>
-            <p class="h4 connection-group-schedule">
-                Second Friday of each month, 7:00 pm
-            </p>
-            <p>
-                Pull out your board games, your dice, and your cards and bring them down to Artisan.
-                Make some new friends while you learn a new game.
-                7:00 pm ’til we’re done; BYO snacks to share.
-            </p>
+            <article class="connection-group">
+                <img class="connection-group-img"
+                     src="/ee/images/site_images/series/Game_Night_we1.jpg"
+                     alt="">
+                <h2 class="connection-group-title">Second Friday Game Night</h2>
+                <p class="h4 connection-group-schedule">
+                    Second Friday of each month, 7:00 pm
+                </p>
+                <p>
+                    Pull out your board games, your dice, and your cards and bring them down to Artisan.
+                    Make some new friends while you learn a new game.
+                    7:00 pm ’til we’re done; BYO snacks to share.
+                </p>
+            </article>
 
-            <h2>Men’s Group</h2>
-            <!-- <img class="connection-group-img"
-                 src=""
-                 alt=""> -->
-            <p class="h4 connection-group-schedule">
-                Once a month; day and location varies
-            </p>
-            <p>
-                The men of Artisan church get together once a month for fun and fellowship.
-                Current and past activities include playing lawn games, visiting breweries, bowling,
-                and watching movies together.
-            </p>
-
-            <p>
-                Join our <a href="https://www.facebook.com/groups/172090406151107/">Facebook group</a>
-                to be kept abreast of upcoming men’s events!
-            </p>
+            <article class="connection-group">
+                {!-- <img class="connection-group-img"
+                     src=""
+                     alt=""> --}
+                <h2 class="connection-group-title">Men’s Group</h2>
+                <p class="h4 connection-group-schedule">
+                    Once a month; day and location varies
+                </p>
+                <p>
+                    The men of Artisan church get together once a month for fun and fellowship.
+                    Current and past activities include playing lawn games, visiting breweries, bowling,
+                    and watching movies together.
+                </p>
+                <p>
+                    Join our <a href="https://www.facebook.com/groups/172090406151107/">Facebook group</a>
+                    to be kept abreast of upcoming men’s events!
+                </p>
+            </article>
 
             {!-- <h2>Past groups</h2> --}
 
