--- a/giving.html
+++ b/giving.html
@@ -7,21 +7,21 @@
 {embed="v3/_header" sec_slug="giving"}
 
     <main class="main inside" id="main" role="main">
-
+      <div class="wrapper">
         <section class="content">
 
             <h1>Giving</h1>
 
             <p class="intro">
                 Donate quickly and securely using our
-                <a href="https://acrocny.infellowship.com/onlinegiving" target="_blank">online
-                giving service</a>, hosted at InFellowship.com.
+                <a href="https://artisanchurch.ccbchurch.com/login.php?rurl=trx_give.php" target="_blank">online giving service</a>,
+                hosted at CCBChurch.com.
             </p>
 
             <p>If you’ve never used this system before, it’s simple to sign up.</p>
             <ol>
                 <li>
-                    Create an account for yourself. (InFellowship accounts are for individuals,
+                    Create an account for yourself. (Church Community Builder accounts are for individuals,
                     but don’t worry, your donation will roll into your household donation totals.)
                 </li>
                 <li>
@@ -36,17 +36,17 @@
             <dl>
                 <dt>Simplicity</dt>
                     <dd>
-                        No more forgetting to bring your cash or check on Sunday morning,
-                        or forgetting to mail your gift or catch up later if you miss a week.
+                        You will not need to remember if you gave this month or
+                        need to mail offering checks when you are out of town.
                     </dd>
                 <dt>Security</dt>
                     <dd>
-                        Online giving is more secure than giving by cash or check in that
-                        an electronic gift can’t be lost or stolen.
+                        Online giving is more secure than giving by cash or check,
+                        because an electronic gift can’t be lost or stolen.
                     </dd>
                 <dt>Online Statements</dt>
                     <dd>
-                        Creating an account with InFellowship allows you to log in and
+                        Creating an account with Church Community Builder allows you to log in and
                         view your household’s giving—whether you donated online or at church.
                     </dd>
                 <dt>Helping Artisan</dt>
@@ -59,12 +59,12 @@
             <h2>Our Policies</h2>
 
             <p>
-                Your information is held securely by the InFellowship system.
+                Your information is held securely by the Church Community Builder system.
                 This information will remain private and will never be given away to third parties,
                 other than to process your scheduled contributions.
             </p>
             <p>
-                You can schedule new contributions at any time and can modify or cancel
+                You can schedule new contributions at any time, and can modify or cancel
                 those contributions at any time prior to the date they are scheduled.
                 Once the contribution has been processed, however, it cannot be canceled.
             </p>
@@ -73,11 +73,7 @@
 
             <p>
                 If you have any questions or concerns, please contact our giving manager, Scott Cranfill, at
-                <a href="mailto:giving@artisanchurch.com?subject=Giving inquiry">giving@artisanchurch.com</a>.
-            </p>
-            <p>
-                You can also use the contact form inside the InFellowship system, or browse their help pages.
-                Once logged in, the "Contact us" and "Help" links are in the bar at the top of the page.
+                <a href="mailto:giving@artisanchurch.com">giving@artisanchurch.com</a>.
             </p>
 
         </section>
@@ -87,17 +83,21 @@
             <section class="sidebar-content">
                 <h1>Why give to the church?</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    In one sense, giving to Artisan might be similar to giving to any other non-profit:
+                    if you believe in our mission and our calling, you should give!
+                    100% of our funding comes from the generosity of people who believe in our ministry.
+                    But as people of faith, we also consider giving to the church
+                    to be <em>an act of worship</em> – sharing the gifts that God has given us
+                    with the larger community he is building in and through us.
+                    Thanking God for his provision in our lives, we pray that those who give would be
+                    shaped by their generous sacrifice, and that he would bless and multiply
+                    the gifts that are given in such a way that we would see his kingdom
+                    become a reality on earth as it is in heaven.
                 </p>
             </section>
 
         </aside>
-
+      </div>
     </main>
 
 {embed="v3/_footer" sec_slug="giving"}
