--- a/_sidebar-events.html
+++ b/_sidebar-events.html
@@ -9,7 +9,7 @@
                         <a href="/events/">Current & Upcoming</a>
                     </li>
                     <li class="staff{if embed:page_slug == 'full-calendar'} current{/if}">
-                        <a href="/full-calendar/">Subscribe</a>
+                        <a href="/calendar/">Full Calendar</a>
                     </li>
                 </ul>
             </nav>
@@ -37,12 +37,12 @@
             {/exp:gcal}
             </section>--}
 
-            <section class="sidebar-content">
+            {!--<section class="sidebar-content">
                 <h1>Save the Date</h1>
 
                 <dl class="save-the-date-list">
 
-                {!-- Fetch events with "save-the-date" checked --}
+                {!-- Fetch events with "save-the-date" checked
                 {exp:weblog:entries weblog="events"
                                     search:event_save_the_date="=Yes"
                                     orderby="event_start_date"
@@ -65,6 +65,12 @@
                 {/exp:weblog:entries}
 
                 </dl>
+            </section>--}
+
+            <section class="sidebar-content">
+                <a href="webcal://artisanchurch.ccbchurch.com/w_calendar_sub.ics">
+                    Subscribe in iCalendar (.ics) format <i class="icon-calendar"></i>
+                </a>
             </section>
 
         </aside>
